--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -2,7 +2,7 @@ extends ../layouts/icons-picker-layout
 
 block content
   .icons-picker-loading
-    img(src='assets/images/loading.svg', alt='loading')
+    i.eos-icons.eos-icon-loading
     p Generating font files...
   .container.icons-container
     h3 Click on Icons to select them
