--- a/assets/stylesheets/landing-page/components/variables/icons-picker.scss
+++ b/assets/stylesheets/landing-page/components/variables/icons-picker.scss
@@ -5,3 +5,8 @@ $icons-picker-icons-count-padding: 10px;
 $icons-picker-footer-padding-bottom: 15px;
 $icons-picker-generate-button-padding: 8px;
 $icons-picker-generate-button-border-radius: 20px;
+$icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
+$icons-picker-loading-icon-font-size: 100px;
+$icons-picker-loading-icon-margin-top: 200px;
+$icons-picker-loading-text-margin-top: 25px;
+$icons-picker-loading-zindex: 2000;
