--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -2,6 +2,7 @@ $light-color: #fff;
 $dark-color: #000;
 $light-gray: #dedede;
 $lighter-gray: #d0d0d0;
+$lightest-gray: #eaeaea;
 $dark-gray: #5f5f5f;
 $dark-black: #333;
 $primary-light: #fe673a;
