--- a/assets/stylesheets/landing-page/components/how-to-use.scss
+++ b/assets/stylesheets/landing-page/components/how-to-use.scss
@@ -2,12 +2,23 @@
    ========================================================================== */
 .how-to-use,
 .how-to-use-animated {
-  background: $how-to-use-bg;
-  bottom: 44px;
+  border: 1px solid black;
+  bottom: 53px;
   position: fixed;
   width: 100%;
 }
 
 .close-code-snippet {
   cursor: pointer;
+}
+
+.curved {
+	border-radius: 30px 30px 30px 30px;
+	border-width: 1.39px;
+}
+
+#copy3,
+#copy4 {
+	width: 100%;
+	background-color: $lightest-gray;
 }
