--- a/views/pages/landing.pug
+++ b/views/pages/landing.pug
@@ -153,56 +153,15 @@ block content
       a.d-inline-block.pl-5(title='hesus jerman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
         img(src='assets/images/landing/image4.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Hesus jerman
-      a.d-inline-block.pl-5(title='Abhinandan Sharma on twitter', href='https://twitter.com/abhinandan0659', target='_blank')
+      a.d-inline-block.pl-5(title='Abhinandan Sharma on Linked-In', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', target='_blank')
         img(src='assets/images/landing/image5.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Abhinandan Sharma
-      a.d-inline-block.pl-5(title='Richa Bhist on twitter', href='', target='_blank')
+      a.d-inline-block.pl-5(title='Richa Bhist on Linked-In', href='https://www.linkedin.com/in/richabisht/', target='_blank')
         img(src='assets/images/landing/image6.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Richa Bhist
       a.d-inline-block.pl-5(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
         img(src='assets/images/landing/image7.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Kartikay Bhutani
-      a.d-inline-block.pl-5(title='Zvezdana on Linked in', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
+      a.d-inline-block.pl-5(title='Zvezdana on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
         img(src='assets/images/landing/image8.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Zvezdana
-  // Footer section ---------------------------------------------------------------------------------
-  section#js-contact.bottom-links.text-center.text-white
-    article.container-fluid.footer
-      h3
-        | GET IN TOUCH WITH US
-      .bottom-links-items.row
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/feedback_icon.svg')
-            | Feedback
-          p
-            | Got some ideas or something nice to say to us?
-          a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com')
-            | Send us feedback
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/forum.svg')
-            | Mailing list
-          p
-            | Join our mailing list to receive more information.
-          a.btn.btn-outline-light(href='https://groups.google.com/forum/#!forum/eos-design-system', target='_blank')
-            | Subscribe
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/gitlab-min.svg')
-            | Repository
-          p
-            | Do you want to fork EOS-Icons, contribute, or report an issue?
-          .btn-group-footer
-            a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing', target='_blank')
-              | Repository
-            a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing/issues', target='_blank')
-              | Issues
-        .col-sm-6.col-lg-3
-          h4
-            img.bottom-links-icon(src='./assets/images/landing/twitter.svg')
-            | Twitter
-          p
-            | Get the latest news, meet the team, and more.
-          a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
-            | EOS in Twitter
