--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -2,7 +2,7 @@
 nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-index
   .navbar-brand(href='#')
     img.d-inline-block.align-top.mt-lg-2(src='assets/images/landing/logo.png', width='86', height='35', alt='')
-  a.navbar-brand(href='#') EOS Icons
+  a.navbar-brand(href='landing.html') EOS Icons
   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
     span.navbar-toggler-icon
   #navbarNav.collapse.navbar-collapse
