--- a/assets/stylesheets/landing-page/components/how-to-use.scss
+++ b/assets/stylesheets/landing-page/components/how-to-use.scss
@@ -17,8 +17,7 @@
 	border-width: 1.39px;
 }
 
-#copy3,
-#copy4 {
-	width: 100%;
+.how-to-use-code {
 	background-color: $lightest-gray;
+	width: 100%;
 }
