--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -22,7 +22,7 @@ block content
     input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
   #myTabContent.tab-content
     #home.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='home-tab')
-      a.download-EOS-Icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
+      a.download-eos-icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
         img.download-icons-logo(src='./assets/images/landing/download-icons.png')
         strong
           small.download-icons-text
@@ -33,7 +33,7 @@ block content
           br
           .js-eos-icon-name
     #profile.tab-pane.fade(role='tabpanel', aria-labelledby='profile-tab')
-      a.download-Extended-Icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
+      a.download-extended-icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
         img.download-icons-logo(src='./assets/images/landing/download-icons.png')
         strong
           small.download-icons-text
@@ -60,9 +60,9 @@ block content
         small#close-code-snippet.close-code-snippet.pull-right.mr-5 X Close
       .row
         .col-10
-          input#copy3.curved.p-2
+          input#copy3.how-to-use-code.curved.p-2
         .col-2
-          a.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2#copy1 Copy
+          a#copy1.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
   .how-to-use-animated.bg-jumbotron.forward-index
     .container
       h2.ml-3
@@ -70,9 +70,9 @@ block content
         small#close-code-snippet-animated.close-code-snippet.pull-right.mr-5 X Close
       .row
         .col-10
-          input#copy4.curved.p-2
+          input#copy4.how-to-use-code.curved.p-2
         .col-2
-          a.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2#copy2 Copy
+          a#copy2.btn.btn-lg.btn-dark.text-white.ml-5.pl-4.pr-4.pt-2.pb-2 Copy
   // Icons Request ------------------------------------------------------------------------------------------------
   .bottom-container.bg-jumbotron
     p  Didn't find what you were looking for?
