--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -77,4 +77,24 @@ block content
   .bottom-container.bg-jumbotron
     p  Didn't find what you were looking for?
     div
-      a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
+      button.btn.btn-dark(data-toggle='modal', data-target='#exampleModalCenter') Request new icon
+  // Modal
+  #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenterTitle', aria-hidden='true')
+    .modal-dialog.modal-dialog-centered(role='document')
+      .modal-content
+        .modal-header
+          h5#exampleModalLongTitle.modal-title Before you send a request, keep following in mind:
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+            span(aria-hidden='true') x
+        .modal-body
+          ul
+            li EOS-Icons works with Material icons.
+            li
+              | EOS-Icons is made for products in cloud computing, software infrastructure,
+              | provisioning, server management, etc.
+            li
+              | We won't accept icons other than technical fields like for a restaurant or
+              | a dating app, it's not our market.
+        .modal-footer
+          button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Send Request
