--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -8,9 +8,9 @@ nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-in
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.text-white.ml-auto
       li.nav-item
-        a.nav-link.active(href='landing.html') Home
+        a.nav-link.active(href='index.html') Home
       li.nav-item
-        a.nav-link(href='index.html') Cheatsheet
+        a.nav-link(href='cheatsheet.html') Cheatsheet
       li.nav-item
         a.nav-link(href='icons-picker.html') Customize it
       li.nav-item
