added links to landing page buttons and fixed navbar

--- a/assets/stylesheets/landing-page/landing.scss
+++ b/assets/stylesheets/landing-page/landing.scss
@@ -99,6 +99,11 @@ div.fixed-rectangle-inverse {
   z-index: 10;
 }
 
+a.mx-custom {
+  margin-left: 105px;
+  margin-right: 105px;
+}
+
 /* Template styles and buttons
    ========================================================================== */
 body {
