--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -2,16 +2,16 @@
 nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-index
   .navbar-brand(href='#')
     img.d-inline-block.align-top.mt-lg-2(src='assets/images/landing/logo.png', width='86', height='35', alt='')
-  a.navbar-brand(href='landing.html') EOS Icons
+  a.navbar-brand(href='/') EOS Icons
   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
     span.navbar-toggler-icon
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.text-white.ml-auto
       li.nav-item
-        a.nav-link.active(href='index.html') Home
+        a.nav-link.current(href='/') Home
       li.nav-item
-        a.nav-link(href='cheatsheet.html') Cheatsheet
+        a.nav-link.current(href='cheatsheet.html') Cheatsheet
       li.nav-item
-        a.nav-link(href='icons-picker.html') Customize it
+        a.nav-link.current(href='icons-picker.html') Customize it
       li.nav-item
-        a.nav-link(href='/') Features
+        a.nav-link.current(href='#') Docs
