--- a/views/pages/cheatsheet.pug
+++ b/views/pages/cheatsheet.pug
@@ -15,7 +15,7 @@ block content
     input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
   #myTabContent.tab-content
     #home.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='home-tab')
-      a.download-eos-icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
+      a.download-eos-icons-button(href='https://www.npmjs.com/package/eos-icons', target='_blank')
         img.download-icons-logo(src='./assets/images/landing/download-icons.png')
         strong
           small.download-icons-text
@@ -26,7 +26,7 @@ block content
           br
           .js-eos-icon-name
     #profile.tab-pane.fade(role='tabpanel', aria-labelledby='profile-tab')
-      a.download-extended-icons-button(href='http://slack.eosdesignsystem.com', target='_blank')
+      a.download-extended-icons-button(href='https://www.npmjs.com/package/eos-icons', target='_blank')
         img.download-icons-logo(src='./assets/images/landing/download-icons.png')
         strong
           small.download-icons-text
