--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -29,7 +29,7 @@ block content
           |         forward to hearing more about how it helps your
           br
           |         products and projects
-        button.btn.btn-dark.btn-lg.ml-lg-5.mt-lg-1(type='button') Contribute to EOS Icons
+        a.btn.btn-dark.btn-lg.ml-lg-5.mt-lg-1(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank') Contribute to EOS Icons
   // Lot of icons to choose from -------------------------------------------------------------------
   .jumbotron.jumbotron-fluid.mb-lg-0.bg-jumbotron.pb-lg-0
     .container
@@ -100,7 +100,7 @@ block content
         |         foundations that address design from both a broad
         br
         |         and detailed perspective.
-      button.btn.btn-dark.btn-lg.d-flex.mx-auto.mt-lg-4.mb-3(type='button') Check out Extended EOS Icons
+      a.btn.btn-dark.btn-lg.d-flex.mt-lg-4.mb-3.mx-custom(href='/cheatsheet.html') Check out Extended EOS Icons
   // Cheatsheet and new icons request ---------------------------------------------------------------
   .container-fluid
     .row
@@ -115,7 +115,7 @@ block content
             |                better into practice. We might have some
             br
             |                advices for you.
-          button.btn.btn-outline-light.btn-lg.ml-5.mt-1.mb-1.responsive-text(type='button') Check out Cheatsheet
+          a.btn.btn-outline-light.btn-lg.ml-5.mt-1.mb-1.responsive-text(href='/cheatsheet.html') Check out Cheatsheet
       .col-lg-6.bg-request
         .d-inline-block.align-top.pt-5.pr-3
           img.d-inline.responsive-image(src='assets/images/landing/rocket2.png', alt='img-responsive')
@@ -127,14 +127,14 @@ block content
             |                need some icons? We can design them for you
             br
             |                and include them in EOS icons.
-          button.btn.btn-outline-light.btn-lg.ml-5.mt-1.responsive-text(type='button') Request new icons
+          a.btn.btn-outline-light.btn-lg.ml-5.mt-1.responsive-text.text-white(data-toggle='modal', data-target='#exampleModalCenter') Request new icons
   // Checkout EOS DS --------------------------------------------------------------------------------
   .container-fluid.top-gradient.text-white.plane-container
     .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
       h1 Try EOS Icons with EOS Design System
       h4.responsive-text We are a part of EOS Design system and together we work like a charm
     .d-inline-block.text-center.plane-index
-      button.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5.mt-sm-3.responsive-text(type='button') Check out EOS DS
+      a.btn.btn-outline-light.btn-lg.ml-lg-5.mb-lg-5.mt-sm-3.responsive-text(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
     .d-inline-block.ml-5
       img.d-inline-block.plane-img(src='assets/images/landing/plane.png', alt='img-responsive')
   // Contributors section ---------------------------------------------------------------------------
@@ -150,9 +150,9 @@ block content
       a.d-inline-block.pl-5(title='Manuele Carlini on twitter', href='https://twitter.com/manuelecarlini', target='_blank')
         img(src='assets/images/landing/image3.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Manuele Carlini
-      a.d-inline-block.pl-5(title='hesus jerman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
+      a.d-inline-block.pl-5(title='Jesus Herman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
         img(src='assets/images/landing/image4.png', alt='img-responsive')
-        p.text-decoration-none.text-dark.ml-3 Hesus jerman
+        p.text-decoration-none.text-dark.ml-2 Jesus Herman
       a.d-inline-block.pl-5(title='Abhinandan Sharma on Linked-In', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', target='_blank')
         img(src='assets/images/landing/image5.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Abhinandan Sharma
@@ -165,3 +165,23 @@ block content
       a.d-inline-block.pl-5(title='Zvezdana on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
         img(src='assets/images/landing/image8.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Zvezdana
+  // Modal
+  #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenterTitle', aria-hidden='true')
+    .modal-dialog.modal-dialog-centered(role='document')
+      .modal-content
+        .modal-header
+          h5#exampleModalLongTitle.modal-title Before you send a request, keep following in mind:
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+            span(aria-hidden='true') x
+        .modal-body
+          ul
+            li EOS-Icons works with Material icons.
+            li
+              | EOS-Icons is made for products in cloud computing, software infrastructure,
+              | provisioning, server management, etc.
+            li
+              | We won't accept icons other than technical fields like for a restaurant or
+              | a dating app, it's not our market.
+        .modal-footer
+          button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Send Request
