some styling changes

--- a/assets/stylesheets/landing-page/components/icons-picker.scss
+++ b/assets/stylesheets/landing-page/components/icons-picker.scss
@@ -1,4 +1,9 @@
 .icons-container {
+  h3 {
+    margin-bottom: $icons-picker-container-h3-margin-bottom;
+    text-align: center;
+  }
+
   p {
     text-align: center;
   }
