--- a/assets/stylesheets/landing-page/components/searchbar.scss
+++ b/assets/stylesheets/landing-page/components/searchbar.scss
@@ -2,6 +2,7 @@
    ========================================================================== */
 .searchbar {
   margin-left: auto;
+  min-height: 40px;
   padding-left: 8px;
   transition: width .15s ease-in-out;
   width: 130px;
