--- a/assets/stylesheets/landing-page/components/variables/icons-picker.scss
+++ b/assets/stylesheets/landing-page/components/variables/icons-picker.scss
@@ -9,3 +9,4 @@ $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 $icons-picker-loading-icon-font-size: 100px;
 $icons-picker-loading-icon-margin-top: 200px;
 $icons-picker-loading-text-margin-top: 25px;
+$icons-picker-container-h3-margin-bottom: 25px;
