--- a/views/pages/icons-picker.pug
+++ b/views/pages/icons-picker.pug
@@ -9,7 +9,7 @@ block content
     p To continue building an old font, upload #[i icons-config.json] file 
       a.upload-file-hyperlink.link(data-toggle='modal', data-target='#myModal')  here.
     .extended-version-wrap
-      input.searchbar(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
+      input.searchbar.curved(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
     .icons-picker-icons-container.js-extended-icons-list
       .icons-item.icons-item-static-icons.js-extended-icons-item(onclick='addSelection(this)', data-name='action_chains')
         i.eos-icons.js-eos-icons
