--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -20,9 +20,9 @@ block content
         h4
           | EOS icons offers an easily customizable icons for any
           br
-          |         company or project to use. We created guides that are
+          |         company or project to use. We've created guides that are
           br
-          |         adjutable and applicable in any open source project.
+          |         adjustable and applicable to any open source project.
           br
           |         We appreciate your contribution to EOS icons and look
           br
@@ -33,7 +33,7 @@ block content
   // Lot of icons to choose from -------------------------------------------------------------------
   .jumbotron.jumbotron-fluid.mb-lg-0.bg-jumbotron.pb-lg-0
     .container
-      h1.text-center.pb-lg-5.display-4 Lot of Icons to choose from
+      h1.text-center.pb-lg-5.display-4 Lots of Icons to choose from
       img.d-inline-block.pb-lg-5.img-fluid(src='assets/images/landing/icons.png', alt='img-responsive')
   // CSS animated Icons ----------------------------------------------------------------------------
   .text-center.bg-jumbotron
@@ -51,13 +51,13 @@ block content
             br
             |           installing
       h4.d-inline-block.text-left.pl-lg-5
-        | EOS icons offers an easily customizable animated icons. These
+        | EOS icons offers easily customisable animated icons. These
         br
-        |         Icons use only CSS animations and nothing more which make
+        |         icons use only CSS animations and nothing more, which make
         br
         |         things a lot easier when using these icons in your own projects.
         br
-        |         Also they run on the GPU so the frame rate is much higher
+        |         Also, they run on the GPU so the frame rate is much higher
         br
         |         than that of Javascript animations. When it comes to CSS
         br
@@ -68,7 +68,7 @@ block content
         |         Javascript would.
   // A pixel perfect design process -----------------------------------------------------------------
   .text-center.bg-jumbotron
-    h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel perfect design process
+    h1.text-center.pb-lg-5.pt-lg-5.display-4 A pixel-perfect design process
     .text-block.text-left.d-inline-block.position-absolute.mt-lg-5.pt-lg-5.pl-lg-4
       h5
         | 1. Stroke terminal
@@ -112,7 +112,7 @@ block content
           h4.text-white.pl-5.responsive-text
             | Do you already know how to put these icons
             br
-            |                better into practice. We might have some
+            |                better into practice? We might have some
             br
             |                advices for you.
           a.btn.btn-outline-light.btn-lg.ml-5.mt-1.mb-1.responsive-text(href='/cheatsheet.html') Check out Cheatsheet
@@ -162,9 +162,9 @@ block content
       a.d-inline-block.pl-5(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
         img(src='assets/images/landing/image7.png', alt='img-responsive')
         p.text-decoration-none.text-dark.ml-3 Kartikay Bhutani
-      a.d-inline-block.pl-5(title='Zvezdana on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
+      a.d-inline-block.pl-5(title='Zvezdana Marjanovic on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
         img(src='assets/images/landing/image8.png', alt='img-responsive')
-        p.text-decoration-none.text-dark.ml-3 Zvezdana
+        p.text-decoration-none.text-dark.ml-3 Zvezdana Marjanovic
   // Modal
   #exampleModalCenter.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalCenterTitle', aria-hidden='true')
     .modal-dialog.modal-dialog-centered(role='document')
