--- a/views/shared/layout/footer.pug
+++ b/views/shared/layout/footer.pug
@@ -1,11 +1,3 @@
-footer.forward-index
-  .container
-    | Download from gitlab at
-    a(href='https://gitlab.com/SUSE-UIUX/eos-icons') EOS icons
-    | .
-    | Thanks to
-    a(href='https://github.com/sapegin/grunt-webfont') grunt-webfont
-    | .
 section#js-contact.bottom-links.text-center.text-white
   article.container-fluid.footer
     h3
@@ -15,7 +7,7 @@ section#js-contact.bottom-links.text-center.text-white
         h4
           img.bottom-links-icon(src='./assets/images/landing/feedback_icon.svg')
           | Feedback
-        p
+        p.min-height
           | Got some ideas or something nice to say to us?
         a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com')
           | Send us feedback
@@ -23,7 +15,7 @@ section#js-contact.bottom-links.text-center.text-white
         h4
           img.bottom-links-icon(src='./assets/images/landing/forum.svg')
           | Mailing list
-        p
+        p.min-height
           | Join our mailing list to receive more information.
         a.btn.btn-outline-light(href='https://groups.google.com/forum/#!forum/eos-design-system', target='_blank')
           | Subscribe
@@ -31,7 +23,7 @@ section#js-contact.bottom-links.text-center.text-white
         h4
           img.bottom-links-icon(src='./assets/images/landing/gitlab-min.svg')
           | Repository
-        p
+        p.min-height
           | Do you want to fork EOS-Icons, contribute, or report an issue?
         .btn-group-footer
           a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons-landing', target='_blank')
@@ -42,7 +34,7 @@ section#js-contact.bottom-links.text-center.text-white
         h4
           img.bottom-links-icon(src='./assets/images/landing/twitter.svg')
           | Twitter
-        p
+        p.min-height
           | Get the latest news, meet the team, and more.
         a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
           | EOS in Twitter
