--- a/views/shared/layout/header.pug
+++ b/views/shared/layout/header.pug
@@ -14,4 +14,4 @@ nav.navbar.navbar-expand-lg.top-gradient.navbar-dark.border.fixed-top.forward-in
       li.nav-item
         a.nav-link.current(href='icons-picker.html') Customize it
       li.nav-item
-        a.nav-link.current(href='#') Docs
+        a.nav-link.current(href='docs.html') Docs
