fixed icon font

--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -9,6 +9,8 @@ $primary-light: #fe673a;
 $dark-red: #d60015;
 $hyper-link-color: #008ACF;
 $hyper-link-hover-color: #15578f;
+$command: #c0341d;
+$codes: #505050;
 
 /* Gradient */
 
