--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -104,15 +104,15 @@ block content
       li
         h5.mb-3 Implementation example with MD icon
       |
-      i.material-icons.md-18 face
+      i.eos-icons.md-18.mr-3 face
       |
-      i.material-icons.md-24 face
+      i.eos-icons.md-24.mr-3 face
       |
-      i.material-icons.md-36 face
+      i.eos-icons.md-36.mr-3 face
       |
-      i.material-icons.md-48 face
+      i.eos-icons.md-48 face
       |
-      code.mb-3.codes
+      code.mb-3.codes.mt-3
         | &lt;i class=&apos;material-icons md-18&apos;&gt;face&lt;/i&gt;
         br
         | &lt;i class=&apos;material-icons md-24&apos;&gt;face&lt;/i&gt;
@@ -126,15 +126,15 @@ block content
       li
         h5.mb-3 Implementation example with EOS icon
       |
-      i.eos-icons.md-18 miscellaneous
+      i.eos-icons.md-18.mr-3 miscellaneous
       |
-      i.eos-icons.md-24 miscellaneous
+      i.eos-icons.md-24.mr-3 miscellaneous
       |
-      i.eos-icons.md-36 miscellaneous
+      i.eos-icons.md-36.mr-3 miscellaneous
       |
       i.eos-icons.md-48 miscellaneous
       |
-      code.mb-3.codes
+      code.mb-3.codes.mt-3
         | &lt;i class=&apos;eos-icons md-18&apos;&gt;miscellaneous&lt;/i&gt;
         br
         | &lt;i class=&apos;eos-icons md-24&apos;&gt;miscellaneous&lt;/i&gt;
