removed linting errors

--- a/assets/stylesheets/landing-page/base/variables/spacings.scss
+++ b/assets/stylesheets/landing-page/base/variables/spacings.scss
@@ -7,6 +7,8 @@
 */
 $font-size-body: 14px;
 $space-base: 16px;
+$md-18: 18px;
+$md-36: 36px;
 
 $m: $space-base; // this is the regular size = 16px
 $xs: $m / 4; // = 4px
