--- a/assets/stylesheets/landing-page/landing.scss
+++ b/assets/stylesheets/landing-page/landing.scss
@@ -269,17 +269,17 @@ img.responsive-image {
 }
 
 i.md-18 {
-  font-size: 18px;
+  font-size: $md-18;
 }
 
 i.md-24 {
-  font-size: 24px;
+  font-size: $l;
 }
 
 i.md-36 {
-  font-size: 36px;
+  font-size: $md-36;
 }
 
 i.md-48 {
-  font-size: 48px;
+  font-size: $xxl;
 }
